# impala

./: CMakeLists.txt
cmake/: impala-config.cmake.in
src/: CMakeLists.txt
src/impala/: CMakeLists.txt
src/intrinsicgen/: CMakeLists.txt
test/: CMakeLists.txt
